--- a/pages/19314.html
+++ b/pages/19314.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      identity function in nLab
+      neutral element in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      identity function
+      neutral element
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8460/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -310,137 +310,234 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='equality_and_equivalence'>Equality and Equivalence</h4>
+<h4 id='algebra'>Algebra</h4>
 
 <div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/equivalence'>equivalence</a></strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a></strong></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/universal+algebra'>universal algebra</a></p>
+
+<h2 id='algebraic_theories'>Algebraic theories</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/equality'>equality</a> (<a class='existingWikiWord' href='/nlab/show/equality'>definitional</a>, <a class='existingWikiWord' href='/nlab/show/identity+type'>propositional</a>, <a class='existingWikiWord' href='/nlab/show/equality'>computational</a>, <a class='existingWikiWord' href='/nlab/show/judgmental+equality'>judgemental</a>, <a class='existingWikiWord' href='/nlab/show/equality'>extensional</a>, <a class='existingWikiWord' href='/nlab/show/equality'>intensional</a>, <a class='existingWikiWord' href='/nlab/show/decidable+equality'>decidable</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/algebraic+theory'>algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/2-Lawvere+theory'>2-algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory'>(∞,1)-algebraic theory</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/identity+type'>identity type</a>, <a class='existingWikiWord' href='/nlab/show/equivalence+in+homotopy+type+theory'>equivalence in homotopy type theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/monad'>monad</a> / <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-monad'>(∞,1)-monad</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>, <a class='existingWikiWord' href='/nlab/show/weak+equivalence'>weak equivalence</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+equivalence'>homotopy equivalence</a>, <a class='existingWikiWord' href='/nlab/show/weak+homotopy+equivalence'>weak homotopy equivalence</a>, <a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalence in an (∞,1)-category</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/operad'>operad</a> / <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-operad'>(∞,1)-operad</a></p>
 </li>
+</ul>
 
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/natural+equivalence'>natural equivalence</a>, <a class='existingWikiWord' href='/nlab/show/natural+isomorphism'>natural isomorphism</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge equivalence</a></p>
-</li>
-
-<li>
-<p><strong>Examples.</strong></p>
+<h2 id='algebras_and_modules'>Algebras and modules</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/equivalence+of+categories'>equivalence of categories</a>, <a class='existingWikiWord' href='/nlab/show/adjoint+equivalence'>adjoint equivalence</a>, <a class='existingWikiWord' href='/nlab/show/weak+equivalence+of+internal+categories'>weak equivalence of internal categories</a>, <a class='existingWikiWord' href='/nlab/show/Morita+equivalence'>Morita equivalence</a>, <a class='existingWikiWord' href='/nlab/show/equivalence+of+2-categories'>equivalence of 2-categories</a>, <a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>equivalence of (∞,1)-categories</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/module+over+a+monad'>algebra over a monad</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-monad'>∞-algebra over an (∞,1)-monad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+a+Lawvere+theory'>algebra over an algebraic theory</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-algebraic+theory'>∞-algebra over an (∞,1)-algebraic theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebra over an operad</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-operad'>∞-algebra over an (∞,1)-operad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/action'>action</a>, <a class='existingWikiWord' href='/nlab/show/infinity-action'>∞-action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/representation'>representation</a>, <a class='existingWikiWord' href='/nlab/show/infinity-representation'>∞-representation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/module'>module</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/associated+bundle'>associated bundle</a>, <a class='existingWikiWord' href='/nlab/show/associated+infinity-bundle'>associated ∞-bundle</a></p>
+</li>
+</ul>
+
+<h2 id='higher_algebras'>Higher algebras</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+%28infinity%2C1%29-category'>monoidal (∞,1)-category</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+%28infinity%2C1%29-category'>symmetric monoidal (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoid+in+a+monoidal+%28infinity%2C1%29-category'>monoid in an (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/commutative+monoid+in+a+symmetric+monoidal+%28infinity%2C1%29-category'>commutative monoid in an (∞,1)-category</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p>symmetric monoidal (∞,1)-category of spectra</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/smash+product+of+spectra'>smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+smash+product+of+spectra'>symmetric monoidal smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectrum</a>, <a class='existingWikiWord' href='/nlab/show/module+spectrum'>module spectrum</a>, <a class='existingWikiWord' href='/nlab/show/algebra+spectrum'>algebra spectrum</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/A-infinity-algebra'>A-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/A-infinity-ring'>A-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/A-infinity-space'>A-∞ space</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/C-infinity+algebra'>C-∞ algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/E-infinity-ring'>E-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/E-infinity+algebra'>E-∞ algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module+bundle'>(∞,1)-module bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/multiplicative+cohomology+theory'>multiplicative cohomology theory</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/L-infinity-algebra'>L-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/deformation+theory'>deformation theory</a></li>
 </ul>
 </li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/principle+of+equivalence'>principle of equivalence</a></strong></p>
+<h2 id='model_category_presentations'>Model category presentations</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/univalence+axiom'>univalence</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+algebras'>model structure on simplicial T-algebras</a> / <a class='existingWikiWord' href='/nlab/show/homotopy+T-algebra'>homotopy T-algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+operads'>model structure on operads</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+algebras+over+an+operad'>model structure on algebras over an operad</a></p>
+</li>
 </ul>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/equation'>equation</a></strong></p>
+<h2 id='geometry_on_formal_duals_of_algebras'>Geometry on formal duals of algebras</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/pullback'>fiber product</a>, <a class='existingWikiWord' href='/nlab/show/pullback'>pullback</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/homotopy+pullback'>homotopy pullback</a></p>
-</li>
-
-<li>
-<p><strong>Examples.</strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/linear+equation'>linear equation</a>, <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a>, <a class='existingWikiWord' href='/nlab/show/ordinary+differential+equation'>ordinary differential equation</a>, <a class='existingWikiWord' href='/nlab/show/critical+point'>critical locus</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a>, <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein equation</a>, <a class='existingWikiWord' href='/nlab/show/wave+equation'>wave equation</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Schr%C3%B6dinger+equation'>Schrödinger equation</a>, <a class='existingWikiWord' href='/nlab/show/Knizhnik-Zamolodchikov+equation'>Knizhnik-Zamolodchikov equation</a>, <a class='existingWikiWord' href='/nlab/show/Maurer-Cartan+equation'>Maurer-Cartan equation</a>, <a class='existingWikiWord' href='/nlab/show/quantum+master+equation'>quantum master equation</a>, <a class='existingWikiWord' href='/nlab/show/Euler-Arnold+equation'>Euler-Arnold equation</a>, <a class='existingWikiWord' href='/nlab/show/Fuchsian+equation'>Fuchsian equation</a>, <a class='existingWikiWord' href='/nlab/show/Fokker-Planck+equation'>Fokker-Planck equation</a>, <a class='existingWikiWord' href='/nlab/show/Lax+equation'>Lax equation</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived geometry</a></p>
 </li>
 </ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Deligne+conjecture'>Deligne conjecture</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/delooping+hypothesis'>delooping hypothesis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+Dold-Kan+correspondence'>monoidal Dold-Kan correspondence</a></p>
 </li>
 </ul>
 <div>
 <p>
-  <a href='/nlab/edit/equality+and+equivalence+-+contents'>Edit this sidebar</a>
+  <a href='/nlab/edit/higher+algebra+-+contents'>Edit this sidebar</a>
 </p>
 </div></div>
 </div>
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
-<h2 id='definition'>Definition</h2>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
 
-<p>Given a <a class='existingWikiWord' href='/nlab/show/set'>set</a> <math class='maruku-mathml' display='inline' id='mathml_847b73b1f64e0b3ff78d86749cf34067b26c764f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi></mrow><annotation encoding='application/x-tex'>S</annotation></semantics></math>, the <strong>identity function</strong> on <math class='maruku-mathml' display='inline' id='mathml_847b73b1f64e0b3ff78d86749cf34067b26c764f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi></mrow><annotation encoding='application/x-tex'>S</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_847b73b1f64e0b3ff78d86749cf34067b26c764f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>id</mi> <mi>S</mi></msub><mo lspace='verythinmathspace'>:</mo><mi>S</mi><mo>→</mo><mi>S</mi></mrow><annotation encoding='application/x-tex'>id_S\colon S \to S</annotation></semantics></math> that maps any element <math class='maruku-mathml' display='inline' id='mathml_847b73b1f64e0b3ff78d86749cf34067b26c764f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi></mrow><annotation encoding='application/x-tex'>x</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_847b73b1f64e0b3ff78d86749cf34067b26c764f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi></mrow><annotation encoding='application/x-tex'>S</annotation></semantics></math> to itself:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_847b73b1f64e0b3ff78d86749cf34067b26c764f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>id</mi> <mi>S</mi></msub><mo>=</mo><mo stretchy='false'>(</mo><mi>x</mi><mo>↦</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>λ</mi><mi>x</mi><mo>.</mo><mspace width='thickmathspace'></mspace><mi>x</mi><mo>;</mo></mrow><annotation encoding='application/x-tex'> id_S = (x \mapsto x) = \lambda x.\; x ;</annotation></semantics></math></div>
-<p>or equivalently,</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_847b73b1f64e0b3ff78d86749cf34067b26c764f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>id</mi> <mi>S</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>x</mi><mo>.</mo></mrow><annotation encoding='application/x-tex'> id_S(x) = x .</annotation></semantics></math></div>
-<p>The identity functions are the <a class='existingWikiWord' href='/nlab/show/identity+morphism'>identity morphisms</a> in the category <a class='existingWikiWord' href='/nlab/show/Set'>Set</a> of sets.</p>
-
-<p>More generally, in any <a class='existingWikiWord' href='/nlab/show/concrete+category'>concrete category</a>, the identity morphism of each object is given by the identity function on its <a class='existingWikiWord' href='/nlab/show/underlying+set'>underlying set</a>.</p>
+<p>In a <a class='existingWikiWord' href='/nlab/show/monoid'>monoid</a> the <em>neutral element</em> (or <em><a class='existingWikiWord' href='/nlab/show/identity+element'>identity element</a></em>) <math class='maruku-mathml' display='inline' id='mathml_576c20abb3fa304bcc0932d2af2700472919be13_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi></mrow><annotation encoding='application/x-tex'>e</annotation></semantics></math> is a chosen element such that its monoid operation acts as the <a class='existingWikiWord' href='/nlab/show/identity+function'>identity function</a>: <math class='maruku-mathml' display='inline' id='mathml_576c20abb3fa304bcc0932d2af2700472919be13_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>e</mi><mo>⋅</mo><mi>a</mi><mo>=</mo><mi>a</mi></mrow><annotation encoding='application/x-tex'>e \cdot a = a</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/neutral+element'>neutral element</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/identity+element'>unit law</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/identity+type'>identity type</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/zero'>zero</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/identity+functor'>identity functor</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a></p>
 </li>
 </ul>
 
 <p>
- 
- 
- 
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 19, 2018 at 02:45:49.
-  See the <a href="https://ncatlab.org/nlab/history/identity function" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on April 19, 2018 at 02:52:35.
+  See the <a href="https://ncatlab.org/nlab/history/neutral element" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/identity+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/identity+function/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/identity+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/identity+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/neutral+element" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/identity+function" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/neutral+element" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/identity+function" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/neutral+element" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/identity+function" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/neutral+element" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
