--- a/pages/4347.html
+++ b/pages/4347.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8459/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,19 +306,225 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The additive identity in the <a class='existingWikiWord' href='/nlab/show/natural+number'>natural numbers</a>, <a class='existingWikiWord' href='/nlab/show/integer'>integers</a>, <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a> and <a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a> is called <strong>zero</strong> and written as <math class='maruku-mathml' display='inline' id='mathml_050ddfe2d4860de2af3736c8dcf6cd9e39d90d0e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>.</p>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
 
-<p>More generally, in any <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a>, or even any <a class='existingWikiWord' href='/nlab/show/commutative+monoid'>commutative monoid</a>, the group operation is often called ‘addition’ and written as <math class='maruku-mathml' display='inline' id='mathml_050ddfe2d4860de2af3736c8dcf6cd9e39d90d0e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace' rspace='0em'>+</mo></mrow><annotation encoding='application/x-tex'>+</annotation></semantics></math>, and then the identity element is called <strong>zero</strong> and written as <math class='maruku-mathml' display='inline' id='mathml_050ddfe2d4860de2af3736c8dcf6cd9e39d90d0e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>. As a consequence, in any <a class='existingWikiWord' href='/nlab/show/ring'>ring</a>, or more generally any <a class='existingWikiWord' href='/nlab/show/rig'>rig</a>, the two binary operations are called ‘multiplication’ and ‘addition’, and the identity for addition is called <strong>zero</strong>.</p>
+<h4 id='algebra'>Algebra</h4>
 
-<p>Categorifying this idea, in any <a class='existingWikiWord' href='/nlab/show/2-rig'>2-rig</a> the additive identity may be called <strong>zero</strong>. This is especially true in the case of a <a class='existingWikiWord' href='/nlab/show/distributive+category'>distributive category</a>, that is a category with (at least finitary) <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a> and <a class='existingWikiWord' href='/nlab/show/coproduct'>coproducts</a>, the former distributing over the latter. In this case the <a class='existingWikiWord' href='/nlab/show/initial+object'>initial object</a>, which serves as the identity for coproducts, is often called <strong>zero</strong>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_050ddfe2d4860de2af3736c8dcf6cd9e39d90d0e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>+</mo><mn>0</mn><mo>≅</mo><mi>x</mi></mrow><annotation encoding='application/x-tex'>x + 0 \cong x</annotation></semantics></math></div>
-<p>For example, in the category <a class='existingWikiWord' href='/nlab/show/Set'>Set</a>, the <a class='existingWikiWord' href='/nlab/show/empty+set'>empty set</a> is often written <math class='maruku-mathml' display='inline' id='mathml_050ddfe2d4860de2af3736c8dcf6cd9e39d90d0e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math> in the category-theoretic literature.</p>
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a></strong></p>
 
-<p>In an <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a>, the initial object is also <a class='existingWikiWord' href='/nlab/show/terminal+object'>terminal</a>, and denoted <math class='maruku-mathml' display='inline' id='mathml_050ddfe2d4860de2af3736c8dcf6cd9e39d90d0e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>. More generally, any object with this property is called a <a class='existingWikiWord' href='/nlab/show/zero+object'>zero object</a>.</p>
+<p><a class='existingWikiWord' href='/nlab/show/universal+algebra'>universal algebra</a></p>
+
+<h2 id='algebraic_theories'>Algebraic theories</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebraic+theory'>algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/2-Lawvere+theory'>2-algebraic theory</a> / <a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2C1%29-algebraic+theory'>(∞,1)-algebraic theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monad'>monad</a> / <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-monad'>(∞,1)-monad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operad'>operad</a> / <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-operad'>(∞,1)-operad</a></p>
+</li>
+</ul>
+
+<h2 id='algebras_and_modules'>Algebras and modules</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/module+over+a+monad'>algebra over a monad</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-monad'>∞-algebra over an (∞,1)-monad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+a+Lawvere+theory'>algebra over an algebraic theory</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-algebraic+theory'>∞-algebra over an (∞,1)-algebraic theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/algebra+over+an+operad'>algebra over an operad</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/infinity-algebra+over+an+%28infinity%2C1%29-operad'>∞-algebra over an (∞,1)-operad</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/action'>action</a>, <a class='existingWikiWord' href='/nlab/show/infinity-action'>∞-action</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/representation'>representation</a>, <a class='existingWikiWord' href='/nlab/show/infinity-representation'>∞-representation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/module'>module</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/associated+bundle'>associated bundle</a>, <a class='existingWikiWord' href='/nlab/show/associated+infinity-bundle'>associated ∞-bundle</a></p>
+</li>
+</ul>
+
+<h2 id='higher_algebras'>Higher algebras</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+%28infinity%2C1%29-category'>monoidal (∞,1)-category</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+%28infinity%2C1%29-category'>symmetric monoidal (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoid+in+a+monoidal+%28infinity%2C1%29-category'>monoid in an (∞,1)-category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/commutative+monoid+in+a+symmetric+monoidal+%28infinity%2C1%29-category'>commutative monoid in an (∞,1)-category</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p>symmetric monoidal (∞,1)-category of spectra</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/smash+product+of+spectra'>smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/symmetric+smash+product+of+spectra'>symmetric monoidal smash product of spectra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectrum</a>, <a class='existingWikiWord' href='/nlab/show/module+spectrum'>module spectrum</a>, <a class='existingWikiWord' href='/nlab/show/algebra+spectrum'>algebra spectrum</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/A-infinity-algebra'>A-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/A-infinity-ring'>A-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/A-infinity-space'>A-∞ space</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/C-infinity+algebra'>C-∞ algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/E-infinity-ring'>E-∞ ring</a>, <a class='existingWikiWord' href='/nlab/show/E-infinity+algebra'>E-∞ algebra</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module+bundle'>(∞,1)-module bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/multiplicative+cohomology+theory'>multiplicative cohomology theory</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/L-infinity-algebra'>L-∞ algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/deformation+theory'>deformation theory</a></li>
+</ul>
+</li>
+</ul>
+
+<h2 id='model_category_presentations'>Model category presentations</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+algebras'>model structure on simplicial T-algebras</a> / <a class='existingWikiWord' href='/nlab/show/homotopy+T-algebra'>homotopy T-algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+operads'>model structure on operads</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/model+structure+on+algebras+over+an+operad'>model structure on algebras over an operad</a></p>
+</li>
+</ul>
+
+<h2 id='geometry_on_formal_duals_of_algebras'>Geometry on formal duals of algebras</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived geometry</a></p>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Deligne+conjecture'>Deligne conjecture</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/delooping+hypothesis'>delooping hypothesis</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monoidal+Dold-Kan+correspondence'>monoidal Dold-Kan correspondence</a></p>
+</li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/higher+algebra+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#categorification'>Categorification</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<h2 id='definition'>Definition</h2>
+
+<p>The additive <a class='existingWikiWord' href='/nlab/show/neutral+element'>neutral element</a> in the <a class='existingWikiWord' href='/nlab/show/natural+number'>natural numbers</a>, <a class='existingWikiWord' href='/nlab/show/integer'>integers</a>, <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a> and <a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a> is called <strong>zero</strong> and written as <math class='maruku-mathml' display='inline' id='mathml_93815e63b86a5436ddfda4c1bb554b0767ba039f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>.</p>
+
+<p>More generally, in any <a class='existingWikiWord' href='/nlab/show/abelian+group'>abelian group</a>, or even any <a class='existingWikiWord' href='/nlab/show/commutative+monoid'>commutative monoid</a>, the group operation is often called ‘addition’ and written as <math class='maruku-mathml' display='inline' id='mathml_93815e63b86a5436ddfda4c1bb554b0767ba039f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo lspace='verythinmathspace' rspace='0em'>+</mo></mrow><annotation encoding='application/x-tex'>+</annotation></semantics></math>, and then the <a class='existingWikiWord' href='/nlab/show/neutral+element'>neutral element</a> is called <strong>zero</strong> and written as <math class='maruku-mathml' display='inline' id='mathml_93815e63b86a5436ddfda4c1bb554b0767ba039f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>. As a consequence, in any <a class='existingWikiWord' href='/nlab/show/ring'>ring</a>, or more generally any <a class='existingWikiWord' href='/nlab/show/rig'>rig</a>, the two binary operations are called ‘multiplication’ and ‘addition’, and the identity for addition is called <strong>zero</strong>.</p>
+
+<h2 id='categorification'>Categorification</h2>
+
+<p><a class='existingWikiWord' href='/nlab/show/vertical+categorification'>Categorifying</a> this idea, in any <a class='existingWikiWord' href='/nlab/show/2-rig'>2-rig</a> the additive identity may be called <strong>zero</strong>. This is especially true in the case of a <a class='existingWikiWord' href='/nlab/show/distributive+category'>distributive category</a>, that is a category with (at least finitary) <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a> and <a class='existingWikiWord' href='/nlab/show/coproduct'>coproducts</a>, the former distributing over the latter. In this case the <a class='existingWikiWord' href='/nlab/show/initial+object'>initial object</a>, which serves as the identity for coproducts, is often called <strong>zero</strong>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_93815e63b86a5436ddfda4c1bb554b0767ba039f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mo>+</mo><mn>0</mn><mo>≅</mo><mi>x</mi></mrow><annotation encoding='application/x-tex'>x + 0 \cong x</annotation></semantics></math></div>
+<p>For example, in the category <a class='existingWikiWord' href='/nlab/show/Set'>Set</a>, the <a class='existingWikiWord' href='/nlab/show/empty+set'>empty set</a> is often written <math class='maruku-mathml' display='inline' id='mathml_93815e63b86a5436ddfda4c1bb554b0767ba039f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math> in the category-theoretic literature.</p>
+
+<p>In an <a class='existingWikiWord' href='/nlab/show/abelian+category'>abelian category</a>, the initial object is also <a class='existingWikiWord' href='/nlab/show/terminal+object'>terminal</a>, and denoted <math class='maruku-mathml' display='inline' id='mathml_93815e63b86a5436ddfda4c1bb554b0767ba039f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>. More generally, any object with this property is called a <a class='existingWikiWord' href='/nlab/show/zero+object'>zero object</a>.</p>
 
 <p>Categorifying <a class='existingWikiWord' href='/nlab/show/horizontal+categorification'>horizontally</a> instead, we get the notion of <a class='existingWikiWord' href='/nlab/show/zero+morphism'>zero morphism</a>.</p>
 
 <p>All these ideas can be, and have been, categorified further.</p>
+
+<h2 id='related_concepts'>Related concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/zero+morphism'>zero morphism</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/trivial+group'>trivial group</a></p>
+</li>
+</ul>
 
 <p>
  
@@ -328,19 +532,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on August 16, 2010 05:53:00 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (75.117.109.43)
+  <p>
+  Last revised on April 19, 2018 at 02:35:00.
+  See the <a href="https://ncatlab.org/nlab/history/zero" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/zero" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/zero/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/zero" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/zero" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/zero" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/zero/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/zero" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/zero" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/zero" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/zero" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/zero" id="view_source" rel="nofollow">Source</a>
